--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -267,7 +267,8 @@
     "will_be_marked": "se marcará como visitado una vez guardada la aventura.",
     "cities_updated": "ciudades actualizadas",
     "create_adventure": "Crear aventura",
-    "no_adventures_to_recommendations": "No se encontraron aventuras. \nAñade al menos una aventura para obtener recomendaciones."
+    "no_adventures_to_recommendations": "No se encontraron aventuras. \nAñade al menos una aventura para obtener recomendaciones.",
+    "finding_recommendations": "Descubriendo gemas ocultas para tu próxima aventura"
   },
   "worldtravel": {
     "all": "Todo",
@@ -546,5 +547,12 @@
     "immich_integration": "Integración Immich",
     "documentation": "Documentación de integración de Immich",
     "localhost_note": "Nota: lo más probable es que localhost no funcione a menos que haya configurado las redes acoplables en consecuencia. \nSe recomienda utilizar la dirección IP del servidor o el nombre de dominio."
+  },
+  "recomendations": {
+    "address": "DIRECCIÓN",
+    "contact": "Contacto",
+    "phone": "Teléfono",
+    "recommendation": "Recomendación",
+    "website": "Sitio web"
   }
 }
