--- a/frontend/src/locales/pl.json
+++ b/frontend/src/locales/pl.json
@@ -267,7 +267,8 @@
     "will_be_marked": "zostanie oznaczona jako odwiedzona po zapisaniu przygody.",
     "cities_updated": "miasta zaktualizowane",
     "create_adventure": "Stwórz przygodę",
-    "no_adventures_to_recommendations": "Nie znaleziono żadnych przygód. \nDodaj co najmniej jedną przygodę, aby uzyskać rekomendacje."
+    "no_adventures_to_recommendations": "Nie znaleziono żadnych przygód. \nDodaj co najmniej jedną przygodę, aby uzyskać rekomendacje.",
+    "finding_recommendations": "Odkrywanie ukrytych klejnotów na następną przygodę"
   },
   "worldtravel": {
     "country_list": "Lista krajów",
@@ -546,5 +547,12 @@
     "immich_disabled": "Integracja z Immich została pomyślnie wyłączona!",
     "documentation": "Dokumentacja integracji Immicha",
     "localhost_note": "Uwaga: localhost najprawdopodobniej nie będzie działać, jeśli nie skonfigurujesz odpowiednio sieci dokerów. \nZalecane jest użycie adresu IP serwera lub nazwy domeny."
+  },
+  "recomendations": {
+    "address": "Adres",
+    "contact": "Kontakt",
+    "phone": "Telefon",
+    "recommendation": "Zalecenie",
+    "website": "Strona internetowa"
   }
 }
