--- a/frontend/src/locales/sv.json
+++ b/frontend/src/locales/sv.json
@@ -220,7 +220,8 @@
     "will_be_marked": "kommer att markeras som besökt när äventyret har sparats.",
     "cities_updated": "städer uppdaterade",
     "create_adventure": "Skapa äventyr",
-    "no_adventures_to_recommendations": "Inga äventyr hittades. \nLägg till minst ett äventyr för att få rekommendationer."
+    "no_adventures_to_recommendations": "Inga äventyr hittades. \nLägg till minst ett äventyr för att få rekommendationer.",
+    "finding_recommendations": "Upptäck dolda pärlor för ditt nästa äventyr"
   },
   "home": {
     "desc_1": "Upptäck, planera och utforska med lätthet",
@@ -546,5 +547,12 @@
     "update_integration": "Uppdatera integration",
     "documentation": "Immich Integrationsdokumentation",
     "localhost_note": "Obs: localhost kommer sannolikt inte att fungera om du inte har konfigurerat docker-nätverk i enlighet med detta. \nDet rekommenderas att använda serverns IP-adress eller domännamnet."
+  },
+  "recomendations": {
+    "address": "Adress",
+    "contact": "Kontakta",
+    "phone": "Telefon",
+    "recommendation": "Rekommendation",
+    "website": "Webbplats"
   }
 }
