feat: implement attachment management with upload, delete, and permission checks; update serializers and models

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -129,6 +129,11 @@
 		"search_results": "Searh results",
 		"no_results": "No results found",
 		"wiki_desc": "Pulls excerpt from Wikipedia article matching the name of the adventure.",
+		"attachments": "Attachments",
+		"attachment": "Attachment",
+		"images": "Images",
+		"primary": "Primary",
+		"view_attachment": "View Attachment",
 		"generate_desc": "Generate Description",
 		"public_adventure": "Public Adventure",
 		"location_information": "Location Information",
@@ -245,6 +250,12 @@
 		"finding_recommendations": "Discovering hidden gems for your next adventure",
 		"md_instructions": "Write your markdown here...",
 		"days": "days",
+		"attachment_upload_success": "Attachment uploaded successfully!",
+		"attachment_upload_error": "Error uploading attachment",
+		"upload": "Upload",
+		"attachment_delete_success": "Attachment deleted successfully!",
+		"attachment_update_success": "Attachment updated successfully!",
+		"attachment_update_error": "Error updating attachment",
 		"activities": {
 			"general": "General 🌍",
 			"outdoor": "Outdoor 🏞️",
