--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -268,7 +268,20 @@
     "cities_updated": "ciudades actualizadas",
     "create_adventure": "Crear aventura",
     "no_adventures_to_recommendations": "No se encontraron aventuras. \nAñade al menos una aventura para obtener recomendaciones.",
-    "finding_recommendations": "Descubriendo gemas ocultas para tu próxima aventura"
+    "finding_recommendations": "Descubriendo gemas ocultas para tu próxima aventura",
+    "attachment": "Adjunto",
+    "attachment_delete_success": "¡El archivo adjunto se eliminó exitosamente!",
+    "attachment_update_error": "Error al actualizar el archivo adjunto",
+    "attachment_update_success": "¡Adjunto actualizado exitosamente!",
+    "attachment_upload_error": "Error al cargar el archivo adjunto",
+    "attachment_upload_success": "¡El archivo adjunto se cargó exitosamente!",
+    "attachments": "Adjuntos",
+    "gpx_tip": "¡Sube archivos GPX a archivos adjuntos para verlos en el mapa!",
+    "images": "Imágenes",
+    "primary": "Primario",
+    "upload": "Subir",
+    "view_attachment": "Ver archivo adjunto",
+    "attachment_name": "Nombre del archivo adjunto"
   },
   "worldtravel": {
     "all": "Todo",
