Mass documentation spelling check, as well as improving the unraid installation guide, and some small changes to the docker installation guide.

--- a/documentation/docs/changelogs/v0-8-0.md
+++ b/documentation/docs/changelogs/v0-8-0.md
@@ -19,7 +19,7 @@ I’m thrilled to announce the release of **AdventureLog v0.8.0**, a huge update
 ### 🚗 Transportation
 
 - **New Transportation Edit Modal**: Includes detailed origin and destination location information for better trip planning.
-- **Autocomplete for Airport Codes**: Quickly find and add airport codes while planning transportations.
+- **Autocomplete for Airport Codes**: Quickly find and add airport codes while planning transportation.
 - **New Transportation Card Design**: Redesigned for better clarity and aesthetics.
 
 ---
@@ -27,7 +27,7 @@ I’m thrilled to announce the release of **AdventureLog v0.8.0**, a huge update
 ### 📝 Notes and Checklists
 
 - **New Modals for Notes and Checklists**: Simplified creation and editing of your notes and checklists.
-- **Delete Confirmation**: Added a confirmation step when deleting notes, checklists, or transportations to prevent accidental deletions.
+- **Delete Confirmation**: Added a confirmation step when deleting notes, checklists, or transportation to prevent accidental deletions.
 
 ---
 
@@ -41,7 +41,7 @@ I’m thrilled to announce the release of **AdventureLog v0.8.0**, a huge update
 
 ### 🗓️ Calendar
 
-- **Calendar View**: View your adventures and transportations in a calendar layout.
+- **Calendar View**: View your adventures and transportation in a calendar layout.
 - **ICS File Export**: Export your calendar as an ICS file for use with external apps like Google Calendar or Outlook.
 
 ---
