--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -51,9 +51,9 @@
     "close_filters": "Sluit filters",
     "collection": "Collectie",
     "collection_adventures": "Inclusief collectie-avonturen",
-    "collection_link_error": "Fout bij het koppelen van avontuur aan collectie",
+    "collection_link_error": "Fout bij het koppelen van dit avontuur aan de collectie",
     "collection_link_success": "Avontuur succesvol gekoppeld aan collectie!",
-    "collection_remove_error": "Fout bij verwijderen van avontuur uit collectie",
+    "collection_remove_error": "Fout bij verwijderen van dit avontuur uit de collectie",
     "collection_remove_success": "Avontuur is succesvol uit de collectie verwijderd!",
     "count_txt": "resultaten die overeenkomen met uw zoekopdracht",
     "create_new": "Maak nieuwe...",
@@ -94,9 +94,9 @@
     "dates": "Datums",
     "delete_adventure": "Avontuur verwijderen",
     "duration": "Duur",
-    "image_removed_error": "Fout bij verwijderen van afbeelding",
+    "image_removed_error": "Fout bij het verwijderen van de afbeelding",
     "image_removed_success": "Afbeelding succesvol verwijderd!",
-    "image_upload_error": "Fout bij het uploaden van afbeelding",
+    "image_upload_error": "Fout bij het uploaden van de afbeelding",
     "image_upload_success": "Afbeelding succesvol geüpload!",
     "no_image_url": "Er is geen afbeelding gevonden op die URL.",
     "planned": "Gepland",
@@ -117,7 +117,7 @@
     "category": "Categorie",
     "clear_map": "Kaart leegmaken",
     "copy_link": "Kopieer link",
-    "date_constrain": "Beperk u tot ophaaldata",
+    "date_constrain": "Beperk tot de datums van de collectie",
     "description": "Beschrijving",
     "end_date": "Einddatum",
     "fetch_image": "Afbeelding ophalen",
@@ -126,7 +126,7 @@
     "image_fetch_failed": "Kan afbeelding niet ophalen",
     "link": "Link",
     "location": "Locatie",
-    "location_information": "Locatie-informatie",
+    "location_information": "Informatie over de locatie",
     "my_images": "Mijn afbeeldingen",
     "my_visits": "Mijn bezoeken",
     "new_adventure": "Nieuw avontuur",
@@ -152,8 +152,8 @@
     "wikipedia": "Wikipedia",
     "adventure_not_found": "Er zijn geen avonturen om weer te geven. \nVoeg er een paar toe via de plusknop rechtsonder of probeer de filters te wijzigen!",
     "all": "Alle",
-    "error_updating_regions": "Fout bij wijzigen van regio's",
-    "mark_visited": "Markeer bezocht",
+    "error_updating_regions": "Fout bij het wijzigen van regio's",
+    "mark_visited": "Markeer als bezocht",
     "my_adventures": "Mijn avonturen",
     "no_adventures_found": "Geen avonturen gevonden",
     "no_collections_found": "Er zijn geen collecties gevonden waar dit avontuur aan kan worden toegevoegd.",
@@ -162,7 +162,7 @@
     "regions_updated": "regio's bijgewerkt",
     "update_visited_regions": "Werk bezochte regio's bij",
     "update_visited_regions_disclaimer": "Dit kan even duren, afhankelijk van het aantal avondturen dat je hebt beleefd.",
-    "visited_region_check": "Check bezochte regio's",
+    "visited_region_check": "Controleer bezochte regio's",
     "visited_region_check_desc": "Door dit te selecteren, controleert de server alle avonturen die je beleefde en markeert hun regio's als bezocht in de wereldreizen.",
     "add_new": "Nieuw toevoegen...",
     "checklist": "Controlelijst",
@@ -194,9 +194,9 @@
     "adventure_calendar": "Avonturenkalender",
     "emoji_picker": "Emoji-kiezer",
     "hide": "Verbergen",
-    "show": "Show",
+    "show": "Toon",
     "download_calendar": "Agenda downloaden",
-    "md_instructions": "Schrijf hier uw korting...",
+    "md_instructions": "Schrijf hier in markdown...",
     "preview": "Voorbeeld",
     "checklist_delete_confirm": "Weet u zeker dat u deze checklist wilt verwijderen? \nDeze actie kan niet ongedaan worden gemaakt.",
     "clear_location": "Locatie wissen",
@@ -212,10 +212,10 @@
     "out_of_range": "Niet binnen het datumbereik van het reisplan",
     "show_region_labels": "Toon regiolabels",
     "start": "Begin",
-    "starting_airport": "Startende luchthaven",
+    "starting_airport": "Luchthaven van vertrek",
     "to": "Naar",
     "transportation_delete_confirm": "Weet u zeker dat u dit transport wilt verwijderen? \nDeze actie kan niet ongedaan worden gemaakt.",
-    "ending_airport": "Einde luchthaven",
+    "ending_airport": "Luchthaven van aankomst",
     "show_map": "Toon kaart",
     "will_be_marked": "wordt gemarkeerd als bezocht zodra het avontuur is opgeslagen.",
     "cities_updated": "steden bijgewerkt",
@@ -225,9 +225,9 @@
     "attachment": "Bijlage",
     "attachment_delete_success": "Bijlage succesvol verwijderd!",
     "attachment_name": "Naam van bijlage",
-    "attachment_update_error": "Fout bij bijwerken van bijlage",
+    "attachment_update_error": "Fout bij het bijwerken van de bijlage",
     "attachment_update_success": "Bijlage succesvol bijgewerkt!",
-    "attachment_upload_error": "Fout bij het uploaden van bijlage",
+    "attachment_upload_error": "Fout bij het uploaden van de bijlage",
     "attachment_upload_success": "Bijlage succesvol geüpload!",
     "attachments": "Bijlagen",
     "gpx_tip": "Upload GPX-bestanden naar bijlagen om ze op de kaart te bekijken!",
@@ -254,7 +254,7 @@
     "about": "Over AdventureLog",
     "adventures": "Avonturen",
     "collections": "Collecties",
-    "discord": "discord",
+    "discord": "Discord",
     "documentation": "Documentatie",
     "greeting": "Hoi",
     "logout": "Uitloggen",
@@ -301,7 +301,7 @@
     "email_required": "E-mail is vereist",
     "both_passwords_required": "Beide wachtwoorden zijn vereist",
     "new_password": "Nieuw wachtwoord",
-    "reset_failed": "Kan het wachtwoord niet opnieuw instellen",
+    "reset_failed": "Kan het wachtwoord niet opnieuw instellen.",
     "or_3rd_party": "Of log in met een service van derden"
   },
   "users": {
@@ -325,8 +325,8 @@
     "no_cities_found": "Geen steden gevonden",
     "region_failed_visited": "Kan de regio niet als bezocht markeren",
     "region_stats": "Regiostatistieken",
-    "regions_in": "Regio's binnen",
-    "removed": "VERWIJDERD",
+    "regions_in": "Regio's in",
+    "removed": "verwijderd",
     "view_cities": "Steden bekijken",
     "visit_remove_failed": "Kan bezoek niet verwijderen",
     "visit_to": "Bezoek aan"
@@ -358,8 +358,8 @@
     "join_discord": "Sluit je aan bij Discord",
     "join_discord_desc": "om uw eigen foto's te delen. \nPlaats ze in de",
     "photo_by": "Foto door",
-    "change_password_error": "Kan wachtwoord niet wijzigen. \nOngeldig huidig ​​wachtwoord of ongeldig nieuw wachtwoord.",
-    "current_password": "Huidig ​​wachtwoord",
+    "change_password_error": "Kan wachtwoord niet wijzigen. \nOngeldig huidig wachtwoord of ongeldig nieuw wachtwoord.",
+    "current_password": "Huidig wachtwoord",
     "password_change_lopout_warning": "Na het wijzigen van uw wachtwoord wordt u uitgelogd.",
     "authenticator_code": "Authenticatiecode",
     "copy": "Kopiëren",
@@ -369,7 +369,7 @@
     "email_removed": "E-mail succesvol verwijderd!",
     "email_removed_error": "Fout bij verwijderen van e-mail",
     "email_set_primary": "E-mailadres is succesvol ingesteld als primair!",
-    "email_set_primary_error": "Fout bij het instellen van e-mail als primair",
+    "email_set_primary_error": "Fout bij het instellen van dit e-mail als primair",
     "email_verified": "E-mail succesvol geverifieerd!",
     "email_verified_erorr_desc": "Uw e-mailadres kan niet worden geverifieerd. \nProbeer het opnieuw.",
     "email_verified_error": "Fout bij het verifiëren van e-mailadres",
@@ -403,8 +403,8 @@
     "username_taken": "Deze gebruikersnaam is al in gebruik.",
     "administration_settings": "Beheerinstellingen",
     "documentation_link": "Documentatielink",
-    "launch_account_connections": "Start Accountverbindingen",
-    "launch_administration_panel": "Start het Beheerpaneel",
+    "launch_account_connections": "Start accountverbindingen",
+    "launch_administration_panel": "Start het beheerpaneel",
     "no_verified_email_warning": "U moet een geverifieerd e-mailadres hebben om tweefactorauthenticatie in te schakelen.",
     "social_auth_desc": "Schakel sociale en OIDC-authenticatieproviders in of uit voor uw account. \nMet deze verbindingen kunt u inloggen met zelfgehoste authenticatie-identiteitsproviders zoals Authentik of externe providers zoals GitHub.",
     "social_auth_desc_2": "Deze instellingen worden beheerd op de AdventureLog-server en moeten handmatig worden ingeschakeld door de beheerder.",
@@ -414,9 +414,9 @@
   },
   "checklist": {
     "add_item": "Artikel toevoegen",
-    "checklist_delete_error": "Fout bij verwijderen van controlelijst",
+    "checklist_delete_error": "Fout bij verwijderen van de controlelijst",
     "checklist_deleted": "Controlelijst succesvol verwijderd!",
-    "checklist_editor": "Controlelijst-editor",
+    "checklist_editor": "Controlelijsten bewerken",
     "checklist_public": "Deze controlelijst is openbaar omdat deze zich in een openbare collectie bevindt.",
     "editing_checklist": "Controlelijst bewerken",
     "failed_to_save": "Kan controlelijst niet opslaan",
@@ -427,7 +427,7 @@
     "new_item": "Nieuw artikel",
     "save": "Opslaan",
     "checklist_viewer": "Controlelijstviewer",
-    "new_checklist": "Nieuwe checklist"
+    "new_checklist": "Nieuwe controlelijst"
   },
   "collection": {
     "collection_created": "Collectie succesvol aangemaakt!",
@@ -435,7 +435,7 @@
     "create": "Aanmaken",
     "edit_collection": "Collectie bewerken",
     "error_creating_collection": "Fout bij aanmaken collectie",
-    "error_editing_collection": "Fout bij bewerken collectie",
+    "error_editing_collection": "Fout bij het bewerken van de collectie",
     "new_collection": "Nieuwe collectie",
     "public_collection": "Openbare collectie"
   },
@@ -446,22 +446,22 @@
     "failed_to_save": "Kan opmerking niet opslaan",
     "note_delete_error": "Fout bij verwijderen van opmerking",
     "note_deleted": "Opmerking succesvol verwijderd!",
-    "note_editor": "Opmerking-editor",
+    "note_editor": "Opmerkingen bewerken",
     "note_public": "Deze opmerking is openbaar omdat deze zich in een openbare collectie bevindt.",
     "open": "Open",
     "save": "Opslaan",
     "invalid_url": "Ongeldige URL",
-    "note_viewer": "Notitieviewer"
+    "note_viewer": "Bekijk notities"
   },
   "transportation": {
     "date_and_time": "Datum",
     "date_time": "Startdatum",
-    "edit": "Bewerking",
+    "edit": "Bewerk",
     "edit_transportation": "Vervoer bewerken",
     "end_date_time": "Einddatum",
-    "error_editing_transportation": "Fout bij bewerken van vervoer",
+    "error_editing_transportation": "Fout bij het bewerken van het vervoer",
     "flight_number": "Vluchtnummer",
-    "from_location": "Van locatie",
+    "from_location": "Vertreklocatie",
     "modes": {
       "bike": "Fiets",
       "boat": "Boot",
@@ -470,9 +470,9 @@
       "car": "Auto",
       "other": "Ander",
       "plane": "Vliegtuig",
-      "walking": "Lopen"
+      "walking": "Wandelen"
     },
-    "to_location": "Naar locatie",
+    "to_location": "Aankomstlocatie",
     "transportation_edit_success": "Vervoer succesvol bewerkt!",
     "type": "Type",
     "new_transportation": "Nieuw vervoer",
@@ -490,7 +490,7 @@
   },
   "map": {
     "add_adventure": "Voeg nieuw avontuur toe",
-    "add_adventure_at_marker": "Voeg een nieuw avontuur toe bij markeerpunt",
+    "add_adventure_at_marker": "Voeg een nieuw avontuur toe bij het markeerpunt",
     "adventure_map": "Avonturenkaart",
     "clear_marker": "Verwijder markeerpunt",
     "map_options": "Kaartopties",
@@ -520,10 +520,10 @@
   "categories": {
     "category_name": "Categorienaam",
     "edit_category": "Categorie bewerken",
-    "icon": "Ikoon",
+    "icon": "Icoon",
     "manage_categories": "Beheer categorieën",
     "no_categories_found": "Geen categorieën gevonden.",
-    "select_category": "Selecteer categorie",
+    "select_category": "Selecteer een categorie",
     "update_after_refresh": "De avonturenkaarten worden bijgewerkt zodra u de pagina vernieuwt."
   },
   "dashboard": {
@@ -538,7 +538,7 @@
   },
   "immich": {
     "api_key": "Immich API-sleutel",
-    "api_note": "Let op: dit moet de URL naar de Immich API-server zijn, dus deze eindigt waarschijnlijk op /api, tenzij je een aangepaste configuratie hebt.",
+    "api_note": "Let op: dit moet de URL naar de Immich API-server zijn, deze eindigt dus waarschijnlijk op /api, tenzij je een aangepaste configuratie hebt.",
     "disable": "Uitzetten",
     "enable_immich": "Schakel Immich in",
     "imageid_required": "Afbeeldings-ID is vereist",
@@ -559,7 +559,7 @@
     "server_url": "Immich-server-URL",
     "update_integration": "Integratie bijwerken",
     "documentation": "Immich-integratiedocumentatie",
-    "localhost_note": "Opmerking: localhost zal hoogstwaarschijnlijk niet werken tenzij u de docker-netwerken dienovereenkomstig hebt ingesteld. \nHet wordt aanbevolen om het IP-adres van de server of de domeinnaam te gebruiken."
+    "localhost_note": "Opmerking: localhost zal hoogstwaarschijnlijk niet werken tenzij dit bewust zo geconfigureerd is in het docker-netwerk. \nHet is aanbevolen om het IP-adres van de server of de domeinnaam te gebruiken."
   },
   "recomendations": {
     "address": "Adres",
