--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -191,7 +191,7 @@
 		"no_description_found": "No description found",
 		"adventure_created": "Adventure created",
 		"adventure_create_error": "Failed to create adventure",
-		"hotel": "Hotel",
+		"lodging": "Lodging",
 		"create_adventure": "Create Adventure",
 		"adventure_updated": "Adventure updated",
 		"adventure_update_error": "Failed to update adventure",
@@ -200,6 +200,7 @@
 		"new_adventure": "New Adventure",
 		"basic_information": "Basic Information",
 		"no_adventures_to_recommendations": "No adventures found. Add at leat one adventure to get recommendations.",
+		"display_name": "Display Name",
 		"adventure_not_found": "There are no adventures to display. Add some using the plus button at the bottom right or try changing filters!",
 		"no_adventures_found": "No adventures found",
 		"mark_region_as_visited": "Mark region {region}, {country} as visited?",
@@ -250,6 +251,9 @@
 		"out_of_range": "Not in itinerary date range",
 		"preview": "Preview",
 		"finding_recommendations": "Discovering hidden gems for your next adventure",
+		"location_details": "Location Details",
+		"city": "City",
+		"region": "Region",
 		"md_instructions": "Write your markdown here...",
 		"days": "days",
 		"attachment_upload_success": "Attachment uploaded successfully!",
@@ -486,6 +490,30 @@
 		},
 		"transportation_edit_success": "Transportation edited successfully!",
 		"edit_transportation": "Edit Transportation",
+		"start": "Start",
+		"date_and_time": "Date & Time"
+	},
+	"lodging": {
+		"lodging_deleted": "Lodging deleted successfully!",
+		"lodging_delete_error": "Error deleting lodging",
+		"provide_start_date": "Please provide a start date",
+		"lodging_type": "Lodging Type",
+		"type": "Type",
+		"lodging_added": "Lodging added successfully!",
+		"error_editing_lodging": "Error editing lodging",
+		"new_lodging": "New Lodging",
+		"check_in": "Check In",
+		"check_out": "Check Out",
+		"edit": "Edit",
+		"modes": {
+			"hotel": "Hotel",
+			"hostel": "Hostel",
+			"airbnb": "Airbnb",
+			"camping": "Camping",
+			"other": "Other"
+		},
+		"lodging_edit_success": "Lodging edited successfully!",
+		"edit_lodging": "Edit Lodging",
 		"start": "Start",
 		"date_and_time": "Date & Time"
 	},
